--- a/vezbi/personalPage/css/main.css
+++ b/vezbi/personalPage/css/main.css
@@ -2,9 +2,10 @@
     width: 1280px;
     height: 1024px;
     float: left;
+    background-color: white;
 }
 
-.logo{
+.mainLogo{
     width: 1280px;
     height: 160px;
     float: left;
@@ -15,85 +16,112 @@
     float: left;
     margin-left: 500px;
     margin-right: 500px;
-
 }
 
-.nav{
+.mainNav{
     width: 1280px;
     height: 320px;
     float: left;
-    background-color: #062F4F;
+    background-color: #8DCDC1;
 }
-.navInner{
-    width: 1000px;
+.mainNavInner{
+    width: 880px;
     height: 120px;
     float: left;
     margin-top: 20px;
     margin-bottom: 180px;
+    margin-left: 200px;
+    margin-right: 200px;
+    background-color: lightblue;
+}
+
+.mainNavAbout{
+    width: 440px;
+    height: 60px;
+    float: left;
+    background-color: #D3E397;
+}
+.mainNavProjects{
+    width: 440px;
+    height: 60px;
+    float: left;
+    background-color: #EB6E44;
+}
+.mainNavPlans{
+    width: 440px;
+    height: 60px;
+    float: left;
+    background-color: #FFF5C3;
+}
+.mainNavContact{
+    width: 440px;
+    height: 60px;
+    float: left;
+    background-color: #7C786A;
+}
+
+.mainContent{
+    width: 1280px;
+    height: 680px;
+    float: left;
+    background-image: url("/personalPage/img/pozadina1.jpg");
+}
+.mainContentInner{
+    width: 1000px;
+    height: 540px;
+    float: left;
+    background-color: #D3E397;
+    margin-top: 140px;
     margin-left: 140px;
     margin-right: 140px;
 }
-.navHome{
-    width: 240px;;
+.mainContentSlika{
+    width: 500px;
+    height: 540px;
+    float: left;
+}
+.mainContentSlika1{
+    width: 300px;
+    height: 340px;
+    float: left;
+    margin: 100px;
+    background-image: url("/personalPage/img/slikaBojan.jpg");
+}
+.mainContentInfo{
+    width: 500px;
+    height: 540px;
+    float: left;
+    background-color: #FFF5C3;
+}
+.mainContentInfo1{
+    width: 400px;
+    height: 440px;
+    float: left;
+    margin: 50px;
+    background-color: #FFF5C3;
+}
+
+.mainFooter{
+    width: 1280px;
+    height: 200px;
+    float: left;
+    background-color: #8DCDC1;
+}
+.mainFooterInner{
+    width: 1000px;
     height: 100px;
     float: left;
-    margin: 10px 30px;
-    background-color: #062F4F;
+    background-color: #22287F;
+    margin-left: 140px;
     text-align: center;
-    font-size: 100px;
     color: white;
+    font-size: 50px;
 }
-.navAP{
-    width: 670px;
-    height: 45px;
+.mainFooterSubscribe{
+    width: 200px;
+    height: 100px;
     float: left;
-    margin-top: 10px;
-    margin-bottom: 5px;
-    margin-right: 30px;
+    margin-left: 540px;
+    background-color: gold;
 }
-.navPC{
-    width: 670px;
-    height: 45px;
-    float: left;
-    margin-bottom: 10px;
-    margin-top: 5px;
-    margin-right: 30px;
-}
-.navAbout{
-    width: 320px;
-    height: 45px;
-    float: left;
-    margin-right: 30px;
-    background-color: #B82601;
-    text-align: center;
-    font-size: 40px;
-    font-family: fantasy;
-}
-.navProjects{
-    width: 320px;
-    height: 45px;
-    float: left;
-    background-color: #B82601;
-    text-align: center;
-    font-size: 40px;
-    font-family: fantasy;
-}
-.navPlans{
-    width: 320px;
-    height: 45px;
-    float: left;
-    margin-right: 30px;
-    background-color: #B82601;
-    text-align: center;
-    font-size: 40px;
-    font-family: fantasy;
-}
-.navContact{
-    width: 320px;
-    height: 45px;
-    float: left;
-    background-color: #B82601;
-    text-align: center;
-    font-size: 40px;
-    font-family: fantasy;
-}
+
