--- a/vezbi/personalPage/css/main.css
+++ b/vezbi/personalPage/css/main.css
@@ -64,7 +64,7 @@
     width: 1280px;
     height: 680px;
     float: left;
-    background-image: url("/personalPage/img/pozadina1.jpg");
+    background-image: url("../img/pozadina1.jpg");
 }
 .mainContentInner{
     width: 1000px;
@@ -85,7 +85,7 @@
     height: 340px;
     float: left;
     margin: 100px;
-    background-image: url("/personalPage/img/slikaBojan.jpg");
+    background-image: url("../img/slikaBojan.jpg");
 }
 .mainContentInfo{
     width: 500px;
