--- a/vezbi/1/css/main.css
+++ b/vezbi/1/css/main.css
@@ -15,3 +15,9 @@
     height: 52px;
     border: 1px solid black;
 }
+
+#pecatenjeFunkcija{
+    width: 206px;
+    height: 52px;
+    border: 1px solid black;
+}
