horse bet animacija

--- a/vezbi/horseBet/css/main.css
+++ b/vezbi/horseBet/css/main.css
@@ -48,7 +48,7 @@
     width: 398px;
     height: 23px;
     float: left;
-    border: solid blue 1px;
+    border: solid orange 1px;
 }
 .infoA1{
     width: 199px;
